--- a/style.css
+++ b/style.css
@@ -13,15 +13,15 @@ body {
     text-align: right;
 }
 
-@media (min-width: 768px) {
-    .navbar-nav li a {
-        padding-top: 20px;
-        padding-bottom: 15px;
-        padding-right: 25px;
-        padding-left: 25px;
-        color: transparent;
-    }
+
+.navbar-nav li a {
+    padding-top: 20px;
+    padding-bottom: 15px;
+    padding-right: 25px;
+    padding-left: 25px;
+    color: transparent;
 }
+
 
 .language {
     display: inline-block;
@@ -98,10 +98,10 @@ a {
     background-image: url('jumbo2.jpg');
     background-position: bottom;
     background-size: cover;
-    height: 95vh;
+    height: 100vh;
     width: 100vw;
     padding: 0;
-    
+
 }
 
 .name {
@@ -201,13 +201,13 @@ h6 {
     background-image: url('computer.jpg');
     background-position: left;
     background-size: cover;
-    padding-bottom: 360px;
+    padding-bottom: 100px;
+    padding-top: 42px;
 }
 
 .contact-form {
-    width: 400px;
-    height: 200px;
-    text-align: left;
+    top:50%;
+    justify-content: center;
 }
 
 /*-----------FOOTER----------*/
