--- a/style.css
+++ b/style.css
@@ -210,6 +210,15 @@ h2 {
 }
 
 /*--------SKILLS-----------*/
+.skills {
+    padding-bottom: 96px;
+    
+}
+
+.skill-circle {
+    display: inline-table;
+    margin-bottom: 55px;
+}
 
 .arc1 {
     width: 160px;
@@ -272,12 +281,11 @@ width: 120px;
     width: 110px;
     height: 110px;
     background-color: #fdfdfd;
-    padding-left: 26px;
-    padding-top: 4px;
+    padding-left: 20px;
+    padding-top: 6px;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     line-height: 100px;
-    font-family: sans-serif;
     font-weight: 400;
     text-shadow: 0 1px 0 #fff;
     font-size: 22px;
@@ -293,37 +301,25 @@ width: 120px;
     width: 130px;
 }
 
-
-.skill-icon {
-    text-align: center; 
-    justify-content:center;
-    align-items: center;
-    padding-top: 40px;
-}
-#skill-icon {
-    display: inline-block;
-    box-shadow: 0px 0px 2px #888;
-    background-color: #C3C3C3;
-    color: #8F8F8F;
-    width: 101px;
-    height: 101px;
-    padding: 40px 0;
-    border-radius: 50%;
-    font-size: 68px;
-    text-align: center;
-    vertical-align: middle;
-    transition: all .3s ease-in-out;
-    -moz-transition: all .3s ease-in-out;
-    -webkit-transition: all .3s ease-in-out;
-    margin-top: 2.5px;
-    margin-bottom: 2.5px;
-    line-height: 20px;
-
+.html{
+    padding-left: 5px;
 }
 
-#skill-icon:hover {
-    color: #564F6F;
+.css {
+    padding-left: 11px;
+}
 
+.js {
+   padding-left: 20px; 
+}
+
+.py {
+    padding-left: 17px;
+}
+
+.sql {
+    padding-top: 1px;
+    padding-left: 13px;
 }
 /*-------CONTACT-----------*/
 
