--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ h2 {
     display: inline-table;
     justify-content: center;
     align-items: center;
-    
+
 }
 
 @media (max-width: 768px) {
@@ -164,7 +164,7 @@ h2 {
     z-index: 2;
     display: block;
     opacity: 0.8;
-     transition: all .3s ease-in;
+    transition: all .3s ease-in;
     -moz-transition: all .3s ease-in;
     -webkit-transition: all .3s ease-in;
 }
@@ -210,9 +210,10 @@ h2 {
 }
 
 /*--------SKILLS-----------*/
+
 .skills {
     padding-bottom: 96px;
-    
+
 }
 
 .skill-circle {
@@ -226,34 +227,47 @@ h2 {
     height: 160px;
     background: #564F6F;
     -webkit-transform-origin: -51% 91%;
-    margin-left: -30px;
-    margin-top: 20px;
-    -webkit-transform: translate(-64px,50px);
-    -moz-transform: translate(-64px,50px);
-    -o-transform: translate(-64px,50px);
+    margin-left: -35px;
+    margin-top: -53px;
+    -webkit-transform: translate(-64px, 50px);
+    -moz-transform: translate(-64px, 50px);
+    -o-transform: translate(-64px, 50px);
 }
+
 .arc2 {
-   width: 193px;
+    margin-left: -115px;
+    width: 193px;
     height: 177px;
     background: #564F6F;
-    -webkit-transform: skew(55deg,0deg);
-    -moz-transform: skew(55deg,0deg);
-    -o-transform: skew(55deg,0deg);
-    margin-left: -115px;
-    margin-top: -90px;
+    -webkit-transform: skew(55deg, 0deg);
+    -moz-transform: skew(55deg, 0deg);
+    -o-transform: skew(55deg, 0deg);
     position: absolute;
     -webkit-transition: all .5s linear;
 }
 
-/*.arc-container:hover .arc2 {*/
-/*    margin-left: -50px;*/
-/*    -webkit-transform: skew(-20deg,0deg);*/
-/*    -moz-transform: skew(-20deg,0deg);*/
-/*    -o-transform: skew(-20deg,0deg);*/
-/*}*/
+#html-load2 {
+    margin-top: -160px;
+}
+
+#js-load2 {
+    margin-top: -155px;
+}
+
+#py-load2 {
+    margin-top: -145px;
+}
+
+#sql-load2 {
+    margin-top: -130px;
+}
+
+#dj-load2 {
+    margin-top: -109px;
+}
 
 .arc-wrapper {
-width: 120px;
+    width: 120px;
     height: 120px;
     border-radius: 150px;
     background: #C3C3C3;
@@ -274,8 +288,9 @@ width: 120px;
     line-height: 327px;
     height: 280px;
     color: white;
-    -webkit-mask-image: -webkit-linear-gradient(top, rgba(0,0,0,0.2), rgba(0,0,0,1));
+    -webkit-mask-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 1));
 }
+
 .arc-overlay {
     width: 110px;
     height: 110px;
@@ -294,13 +309,14 @@ width: 120px;
     top: 55px;
     left: 5px;
 }
+
 .arc-container {
     position: relative;
     height: 130px;
     width: 130px;
 }
 
-.html{
+.html {
     padding-left: 5px;
 }
 
@@ -309,7 +325,7 @@ width: 120px;
 }
 
 .js {
-   padding-left: 20px; 
+    padding-left: 20px;
 }
 
 .py {
@@ -320,6 +336,7 @@ width: 120px;
     padding-top: 1px;
     padding-left: 13px;
 }
+
 /*-------CONTACT-----------*/
 
 .contact {
@@ -332,7 +349,7 @@ width: 120px;
 }
 
 .contact-form {
-    top:50%;
+    top: 50%;
     justify-content: center;
 }
 
