--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
 a {
     background-color: #E4E4E4;
     color: #888888;
-    font-size: 18px;
+    font-size: 1.12em;
     padding-left: 10px;
     padding-right: 10px;
     transition: all .3s ease-in-out;
@@ -96,13 +96,14 @@ a {
 
 /*----------JUMBOTRON----------*/
 
-.main {
+.landing-view-section {
     background-attachment: fixed;
     background-image: url('./images/jumbo2.jpg');
     background-position: bottom;
     background-size: cover;
     height: 100vh;
     width: 100vw;
+    margin-bottom: 0px;
 
 }
 
@@ -110,13 +111,13 @@ a {
     padding-left: 12px;
 }
 
-.name {
+h1 {
     padding-top: 5%;
-    font-size: 8rem;
+    font-size: 5.5em;
 }
 
-.title {
-    font-size: 3rem;
+.jumbotron p {
+    font-size: 2em;
 }
 
 /*------------ABOUT----------*/
@@ -125,7 +126,6 @@ a {
     padding-bottom: 10%;
     font-size: 1.75em;
     line-height: 2;
-    height: 100vh;
 }
 
 h2 {
@@ -135,12 +135,12 @@ h2 {
 }
 
 #about-p {
-    font-size: 1.75rem;
+    font-size: .8em;
 }
 
 /*------------WORK----------*/
 
-.work {
+.work-section {
     background-attachment: fixed;
     background-image: url('./images/desk2.jpg');
     background-position: center;
@@ -150,6 +150,7 @@ h2 {
     background-repeat: no-repeat;
     position: relative;
     font-weight: 300;
+    margin-bottom: 0px;
 }
 
 .project-cards {
@@ -162,6 +163,25 @@ h2 {
 @media (max-width: 768px) and (min-width: 375px) {
     #work {
         width: 80%;
+    }
+}
+
+@media (min-width: 992px) {
+    .about-me-section {
+        background-image: url('./images/haley2.jpg');
+        background-position: center;
+        background-size: cover;
+        width: 100vw;
+    }
+    .skills-section {
+        background-image: url('./images/skills.jpg');
+        background-position: center;
+        background-size: cover;
+        height: 100vh;
+        width: 100vw;
+    }
+    .contact-section {
+        height: 100vh;
     }
 }
 
@@ -202,7 +222,7 @@ h2 {
 }
 
 #card-text {
-    font-size: 1.5rem;
+        font-size: 1.07em;
 }
 
 #desktop-icon {
@@ -294,17 +314,18 @@ h2 {
     width: 120px;
     height: 120px;
     border-radius: 150px;
-    background: #C3C3C3;
+    background: #d3d3d3;
     overflow: hidden;
     left: 0px;
     top: 50px;
     position: absolute;
+    box-shadow: 0px 0px 25px #d3d3d3;
 }
 
 .arc-overlay {
     width: 110px;
     height: 110px;
-    background-color: #fdfdfd;
+    background-color: #fafafa;
     padding-left: 20px;
     padding-top: 6px;
     box-sizing: border-box;
@@ -349,7 +370,7 @@ h2 {
 
 /*-------CONTACT-----------*/
 
-.contact {
+.contact-section {
     background-attachment: fixed;
     background-image: url('./images/computer.jpg');
     background-position: left;
@@ -357,6 +378,7 @@ h2 {
     padding-bottom: 100px;
     padding-top: 42px;
     text-align: left;
+    margin-bottom: 30px;
 }
 
 #contact-head {
