fixed navbar bug and content typo

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
 .navbar .navbar-collapse {
     text-align: right;
     border-top: 1px solid transparent;
+    overflow-x: hidden;
 }
 
 .navbar-nav li a {
